# discord

./: .gitignore  Cargo.toml  justfile
assets/: manifest.json
pi/src/lib/: SoundboardSettings.svelte  SoundboardSoundPicker.svelte  UserStatsSettings.svelte  UserVolumeSettings.svelte  VoiceChannelSettings.svelte
pi/src/routes/: layout.css
pi/src/routes/soundboard/: +page.svelte
pi/src/routes/userstats/: +page.svelte
pi/src/routes/uservolume/: +page.svelte
pi/src/routes/voicechannel/: +page.svelte
src/: client.rs  main.rs  rpc_events.rs
src/actions/: mod.rs  soundboard.rs  user_stats.rs  user_volume.rs  voice_channel.rs  voice_settings.rs
